Alignment fixed

--- a/css/styles1.css
+++ b/css/styles1.css
@@ -595,9 +595,14 @@ p{
   border: none;
   outline: none;
   cursor: pointer;
-  padding: 15px;
+
 }
 
 .fa-chevron-up{
-  margin-top: -35px !important;
+  height: 10px;
+  width: 10px;
+  margin-left: 15px;
+  margin-right:10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
